# voice

src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: VoiceMsg.msg
src/speech_to_text/: CMakeLists.txt  package.xml
src/speech_to_text/src/: linuxrec.c  speech_recognizer.c  speech_to_text.cpp  v2t.cpp
src/text_to_speech/: CMakeLists.txt  package.xml
src/text_to_speech/src/: t2v.cpp  text_to_speech.cpp
src/voice_wave/: CMakeLists.txt  package.xml
src/voice_wave/src/: voice_wave.cpp  voice_wave_publish.cpp
